stuck on picks submission, need to make sure that get request is correct in API

--- a/client/src/components/DashboardAdmin/DashboardAdmin.module.css
+++ b/client/src/components/DashboardAdmin/DashboardAdmin.module.css
@@ -12,6 +12,13 @@
   max-width: 1400px;
 }
 
+.search_buttons_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
